<resources>
    <string name="app_name">Activity00</string>
    <string name="title_activity_main">微信</string>

	<string name="action_search">搜索</string>
    <string name="action_group_chat">添加群聊</string>
	<string name="action_add_contacts">添加好友</string>
	<string name="action_scan_qr_code">扫一扫</string>
	<string name="action_help_n_feedback">帮助与反馈</string>

    <string name="hello_world">Hello world!</string>
</resources>
