<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.kezhenxu.study.activity00.Main"
	>

	<item
		android:id="@+id/action_search"
		android:title="@string/action_search"
		android:orderInCategory="99"
		android:icon="@drawable/actionbar_search"
		android:showAsAction="collapseActionView|always"
		android:actionViewClass="android.widget.SearchView"
		/>

	<item
		android:id="@+id/action_group_chat"
		android:title="@string/action_group_chat"
		android:orderInCategory="100"
		android:showAsAction="never"
		/>
	<item
		android:id="@+id/action_add_contacts"
		android:title="@string/action_add_contacts"
		android:orderInCategory="101"
		android:showAsAction="never"
		/>

	<item
		android:id="@+id/action_scan_qr_code"
		android:title="@string/action_scan_qr_code"
		android:orderInCategory="102"
		android:showAsAction="never"
		/>

	<item
		android:id="@+id/action_help_n_feedback"
		android:title="@string/action_help_n_feedback"
		android:orderInCategory="103"
		android:showAsAction="never"
		/>
</menu>
